Обновление блока back-img

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <div class="cheese">
-                <div class="slack tomato"></div>
+                <div class="back-img back-img__tomato"></div>
                 <div class="container">
                     <div class="row">
                         <div class="col-12 col-lg-24">
@@ -153,7 +153,7 @@
                 </div>
             </div>
             <div class="popular ">
-                <div class="slack maslo"></div>
+                <div class="back-img back-img__maslo"></div>
                 <div class="container">
                     <div class="title-big">Самые популярные<br>продукты</div>
                     <div class="popular__carousel">
@@ -346,7 +346,7 @@
                 </div>
             </div>
             <div class="production-spinner container-fluid">
-                <div class="slack slack_cheese"></div>
+                <div class="back-img back-img__cheese"></div>
                 <div class="container">
                     <div class="row">
                         <div class="col-12 col-lg-24">
@@ -425,7 +425,7 @@
                 </div>
             </div>
             <div class="random container-fluid">
-                <div class="slack cheese_and_tomato"></div>
+                <div class="back-img back-img__cheese-and-tomato"></div>
                 <div class="row">
                     <div class="col-1 col-xl-none">
                         <div class="random__point"></div>
@@ -511,10 +511,10 @@
                 </div>
             </div>
             <div class="clients ">
-                <div class="slack petro left"></div>
-                <div class="slack petro left-2"></div>
-                <div class="slack petro right"></div>
-                <div class="slack petro right-2"></div>
+                <div class="back-img back-img__petro back-img__petro_left"></div>
+                <div class="back-img back-img__petro back-img__petro_left-2"></div>
+                <div class="back-img back-img__petro back-img__petro_right"></div>
+                <div class="back-img back-img__petro back-img__petro_right-2"></div>
 
                 <div class="container">
                     <h3 class="clients__title">Наши клиенты</h3>
