--- a/product-catalog.html
+++ b/product-catalog.html
@@ -90,12 +90,12 @@
             </div>
             <div class="container">
                 <div class="element">
-                    <h1 class="title__h1">Каталог продукции</h1>
+                    <h1 class="element__title__h1">Каталог продукции</h1>
                 </div>
                 <div class="search">
                     <div class="search__form">
                         <form action="" method="get">
-                            <input type="text" placeholder="Поиск" name="q" value="" size="40">
+                            <input type="text" placeholder="" name="q" value="" size="40">
                             <button aria-label="" role="button" type="submit" value="Искать"><i class="icon search__form_button"></i></button>
                         </form>
                     </div>
@@ -167,7 +167,7 @@
                            </div>
                        </div>
                     </div>
-                    <div class="col-18">
+                    <div class="col-20">
                         <div class="product__category">
                             <a href="" class="product__category__item">
                                 <div class="product__category__item__images">
