Фильтр и элементы и поиск 2

--- a/product-catalog.html
+++ b/product-catalog.html
@@ -93,10 +93,10 @@
                     <h1 class="element__title__h1">Каталог продукции</h1>
                 </div>
                 <div class="search">
-                    <div class="search__form">
+                    <div class="search__form-mini">
                         <form action="" method="get">
-                            <input type="text" placeholder="" name="q" value="" size="40">
-                            <button aria-label="" role="button" type="submit" value="Искать"><i class="icon search__form_button"></i></button>
+                            <input class="search__form-mini__input" type="text" placeholder="" name="q" value="" size="40">
+                            <button class="search__form-mini__button" role="button" type="submit" value="Искать"><i class="icon search__form_button"></i></button>
                         </form>
                     </div>
                 </div>
