--- a/product-category.html
+++ b/product-category.html
@@ -213,20 +213,28 @@
                         <div class="container-full">
                             <div class="row">
                                 <div class="col-8">
-                                    <div class="products-block__item">
-                                        <img src="images/product/products/product-item.png" alt="image-product">
-                                        <h3>Полутвёрдый продукт Бутербродный</h3>
-                                        <p class="products-block__art">арт. 2345</p>
-                                        <p>Bonfesto</p>
-                                        <p>жирность: 30%</p>
-                                        <p>Мягкие и полутвердые сыры, выпускаемые по итальянским технологиям.</p>
-                                    </div>
+                                    <a href="">
+                                        <div class="products-block__wrap-item">
+                                            <div class="products-block__item">
+                                                <div class="products-block__item__image">
+                                                    <img src="images/product/products/product-item.png" alt="image-product">
+                                                </div>
+                                                <div class="products-block__item__name">Полутвёрдый продукт Бутербродный</div>
+                                                <p class="products-block__item__art">арт. 2345</p>
+                                                <div class="products-block__item__description">
+                                                    <p class="products-block__item__sort">Bonfesto</p>
+                                                    <p class="products-block__item__sort-fat">жирность: 30%</p>
+                                                    <p class="products-block__item__text">Мягкие и полутвердые сыры, выпускаемые по итальянским технологиям.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </a>
                                 </div>
                                 <div class="col-8">
                                     <div class="products-block__item">
                                         <img src="images/product/products/product-item-2.png" alt="image-product">
-                                        <h3>Сыр Витязь "РАДОСТЬ ВКУСА"
-                                        </h3>
+                                        <div>Сыр Витязь "РАДОСТЬ ВКУСА"
+                                        </div>
                                         <p class="products-block__art">арт. 2345</p>
                                         <p>Bonfesto</p>
                                         <p>жирность: 30%</p>
@@ -236,8 +244,8 @@
                                 <div class="col-8">
                                     <div class="products-block__item">
                                         <img src="images/product/products/product-item-3.png" alt="image-product">
-                                        <h3>Сыр Российский "РАДОСТЬ ВКУСА"
-                                        </h3>
+                                        <div>Сыр Российский "РАДОСТЬ ВКУСА"
+                                        </div>
                                         <p class="products-block__art">арт. 2345</p>
                                         <p>Bonfesto</p>
                                         <p>жирность: 30%</p>
@@ -247,8 +255,8 @@
                                 <div class="col-8">
                                     <div class="products-block__item">
                                         <img src="images/product/products/product-item-3.png" alt="image-product">
-                                        <h3>Сыр Российский "РАДОСТЬ ВКУСА"
-                                        </h3>
+                                        <div>Сыр Российский "РАДОСТЬ ВКУСА"
+                                        </div>
                                         <p class="products-block__art">арт. 2345</p>
                                         <p>Bonfesto</p>
                                         <p>жирность: 30%</p>
@@ -258,7 +266,7 @@
                                 <div class="col-8">
                                     <div class="products-block__item">
                                         <img src="images/product/products/product-item.png" alt="image-product">
-                                        <h3>Полутвёрдый продукт Бутербродный</h3>
+                                        <div>Полутвёрдый продукт Бутербродный</div>
                                         <p class="products-block__art">арт. 2345</p>
                                         <p>Bonfesto</p>
                                         <p>жирность: 30%</p>
@@ -268,8 +276,8 @@
                                 <div class="col-8">
                                     <div class="products-block__item">
                                         <img src="images/product/products/product-item-2.png" alt="image-product">
-                                        <h3>Сыр Витязь "РАДОСТЬ ВКУСА"
-                                        </h3>
+                                        <div>Сыр Витязь "РАДОСТЬ ВКУСА"
+                                        </div>
                                         <p class="products-block__art">арт. 2345</p>
                                         <p>Bonfesto</p>
                                         <p>жирность: 30%</p>
@@ -279,7 +287,7 @@
                                 <div class="col-8">
                                     <div class="products-block__item">
                                         <img src="images/product/products/product-item.png" alt="image-product">
-                                        <h3>Полутвёрдый продукт Бутербродный</h3>
+                                        <div>Полутвёрдый продукт Бутербродный</div>
                                         <p class="products-block__art">арт. 2345</p>
                                         <p>Bonfesto</p>
                                         <p>жирность: 30%</p>
@@ -289,7 +297,7 @@
                                 <div class="col-8">
                                     <div class="products-block__item">
                                         <img src="images/product/products/product-item-2.png" alt="image-product">
-                                        <h3>Сыр Витязь "РАДОСТЬ ВКУСА"</h3>
+                                        <div>Сыр Витязь "РАДОСТЬ ВКУСА"</div>
                                         <p class="products-block__art">арт. 2345</p>
                                         <p>Bonfesto</p>
                                         <p>жирность: 30%</p>
@@ -299,7 +307,7 @@
                                 <div class="col-8">
                                     <div class="products-block__item">
                                         <img src="images/product/products/product-item-3.png" alt="image-product">
-                                        <h3>Сыр Российский "РАДОСТЬ ВКУСА"</h3>
+                                        <div>Сыр Российский "РАДОСТЬ ВКУСА"</div>
                                         <p class="products-block__art">арт. 2345</p>
                                         <p>Bonfesto</p>
                                         <p>жирность: 30%</p>
@@ -309,7 +317,7 @@
                                 <div class="col-8">
                                     <div class="products-block__item">
                                         <img src="images/product/products/product-item-3.png" alt="image-product">
-                                        <h3>Сыр Российский "РАДОСТЬ ВКУСА"</h3>
+                                        <div>Сыр Российский "РАДОСТЬ ВКУСА"</div>
                                         <p class="products-block__art">арт. 2345</p>
                                         <p>Bonfesto</p>
                                         <p>жирность: 30%</p>
@@ -319,7 +327,7 @@
                                 <div class="col-8">
                                     <div class="products-block__item">
                                         <img src="images/product/products/product-item.png" alt="image-product">
-                                        <h3>Полутвёрдый продукт Бутербродный</h3>
+                                        <div>Полутвёрдый продукт Бутербродный</div>
                                         <p class="products-block__art">арт. 2345</p>
                                         <p>Bonfesto</p>
                                         <p>жирность: 30%</p>
@@ -329,7 +337,7 @@
                                 <div class="col-8">
                                     <div class="products-block__item">
                                         <img src="images/product/products/product-item-2.png" alt="image-product">
-                                        <h3>Сыр Витязь "РАДОСТЬ ВКУСА"</h3>
+                                        <div>Сыр Витязь "РАДОСТЬ ВКУСА"</div>
                                         <p class="products-block__art">арт. 2345</p>
                                         <p>Bonfesto</p>
                                         <p>жирность: 30%</p>
@@ -339,7 +347,7 @@
                                 <div class="col-8">
                                     <div class="products-block__item">
                                         <img src="images/product/products/product-item.png" alt="image-product">
-                                        <h3>Полутвёрдый продукт Бутербродный</h3>
+                                        <div>Полутвёрдый продукт Бутербродный</div>
                                         <p class="products-block__art">арт. 2345</p>
                                         <p>Bonfesto</p>
                                         <p>жирность: 30%</p>
@@ -349,7 +357,7 @@
                                 <div class="col-8">
                                     <div class="products-block__item">
                                         <img src="images/product/products/product-item-2.png" alt="image-product">
-                                        <h3>Сыр Витязь "РАДОСТЬ ВКУСА"</h3>
+                                        <div>Сыр Витязь "РАДОСТЬ ВКУСА"</div>
                                         <p class="products-block__art">арт. 2345</p>
                                         <p>Bonfesto</p>
                                         <p>жирность: 30%</p>
@@ -359,7 +367,7 @@
                                 <div class="col-8">
                                     <div class="products-block__item">
                                         <img src="images/product/products/product-item-3.png" alt="image-product">
-                                        <h3>Сыр Российский "РАДОСТЬ ВКУСА"</h3>
+                                        <div>Сыр Российский "РАДОСТЬ ВКУСА"</div>
                                         <p class="products-block__art">арт. 2345</p>
                                         <p>Bonfesto</p>
                                         <p>жирность: 30%</p>
