--- a/product-category.html
+++ b/product-category.html
@@ -76,7 +76,6 @@
                 </div>
             </div>
         </header>
-
         <div class="container">
             <div class="element">
                 <h1 class="element__title__h1">Категории продукции</h1>
@@ -92,7 +91,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-4">
+                <div class="container-aside">
                     <div class="filter">
                         <div class="filter__title"><span>Настройка<br>поиска</span></div>
 
@@ -179,7 +178,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-18 css-right">
+                <div class="container-main">
                     <div class="category-carousel">
                         <a href="">
                             <div class="category-carousel__item">
