Обновление скрипта сыра и спинера

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 <div class="piece" data-number="item2" data-type="piece"></div>
                                 <div class="piece" data-number="item3" data-type="piece"></div>
                                 <div class="green"></div>
-                                <div class="circle"></div>
+                                <div class="bg"></div>
                                 <div class="icon" data-number="item1" data-type="piece"></div>
                                 <div class="icon" data-number="item2" data-type="piece"></div>
                                 <div class="icon" data-number="item3" data-type="piece"></div>
