--- a/product-page.html
+++ b/product-page.html
@@ -20,8 +20,7 @@
 <body>
     <div class="wrap">
         <header>
-            <div class="header product-category-header-2">
-                <div class="product-category-header-1"></div>
+            <div class="header product-category-header">
                 <div class="header__logo">
                     <a href="/"><img src="images/logo.png" alt="Логотип"></a>
                 </div>
