--- a/index.html
+++ b/index.html
@@ -256,88 +256,149 @@
                     </div>
                 </div>
             </div>
-            <div class="recommendation container-fluid ">
+            <div class="recommendation">
                 <div class="recommendation-carousel">
-                    <div class="recommendation__list">
-                        <div class="col-4 col-xl-6 col-lg-8 col-sm-24">
-                            <div class="row">
-                                <div class="recommendation__block" style="background-image: url('images/recommendation/heidi.jpg')"></div>
-                            </div>
-                            <div class="row">
-                                <div class="recommendation__block" style="background-image: url('images/recommendation/test.jpg')">
-                                    <div class="icon">
-                                        <span class="icon__like"></span>
-                                    </div>
-                                    <div class="recommendation__block__title-mini recommendation__block__line recommendation__block__line_down">Тертые сыры<br> для HoReCa<br> длинный<br> заголовок</div>
+                    <div class="recommendation__carousel__block">
+                        <div class="recommendation__list row">
+                            <div class="col-8 col-xl-6 col-lg-8 col-sm-24">
+                                <div class="row">
+                                    <div class="recommendation__block" style="background-image: url('images/recommendation/heidi.jpg')"></div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="col-8 col-xl-18 col-lg-16 col-sm-24">
-                            <div class="row">
-                                <div class="recommendation__block recommendation__block_col-4">
-                                    <div class="recommendation__block__title">Мы рекомендуем</div>
-                                    <div class="recommendation__block__description">
+                                <div class="row">
+                                    <div class="recommendation__block" style="background-image: url('images/recommendation/test.jpg')">
                                         <div class="icon">
-                                            <i class="icon__star"></i>
+                                            <span class="icon__like"></span>
                                         </div>
-                                        <span>Подборка месяца</span>
+                                        <div class="recommendation__block__title-mini recommendation__block__line recommendation__block__line_down">Тертые сыры<br> для HoReCa<br> длинный<br> заголовок</div>
                                     </div>
-                                    <div class="recommendation__block__text">Элитные импортные сыры высокого качества таких торговых марок, как La Paulina, продукция Великобурлукского, Каневского, Коропского, Херсонского и других сырзаводов</div>
-                                    <div class="recommendation__block__button">
-                                        <a href="" class="button-white">
-                                            <span>Все эксклюзивы</span>
-                                        </a>
+                                </div>
+                            </div>
+                            <div class="col-16 col-xl-18 col-lg-16 col-sm-24">
+                                <div class="row">
+                                    <div class="recommendation__block recommendation__block_col-4">
+                                        <div class="recommendation__block__title">Мы рекомендуем</div>
+                                        <div class="recommendation__block__description">
+                                            <div class="icon">
+                                                <i class="icon__star"></i>
+                                            </div>
+                                            <span>Подборка месяца</span>
+                                        </div>
+                                        <div class="recommendation__block__text">Элитные импортные сыры высокого качества таких торговых марок, как La Paulina, продукция Великобурлукского, Каневского, Коропского, Херсонского и других сырзаводов</div>
+                                        <div class="recommendation__block__button">
+                                            <a href="" class="button-white">
+                                                <span>Все эксклюзивы</span>
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-4 col-xl-8 col-lg-8 col-md-12 col-sm-24">
-                            <div class="row">
-                                <div class="recommendation__block" style="background-image: url('images/recommendation/ras.jpg')">
-                                    <div class="icon">
-                                        <span class="icon__like"></span>
+                    </div>
+                    <div class="recommendation__carousel__block">
+                        <div class="recommendation__list row">
+                            <div class="col-8 col-xl-8 col-lg-8 col-md-12 col-sm-24">
+                                <div class="row">
+                                    <div class="recommendation__block" style="background-image: url('images/recommendation/ras.jpg')">
+                                        <div class="icon">
+                                            <span class="icon__like"></span>
+                                        </div>
+                                        <div class="recommendation__block__title-mini recommendation__block__line recommendation__block__line_right">
+                                            <p>Рассольные сыры собственного приготовления линейка опускается с нижней стороны</p></div>
                                     </div>
-                                    <div class="recommendation__block__title-mini recommendation__block__line recommendation__block__line_right">
-                                        <p>Рассольные сыры собственного приготовления линейка опускается с нижней стороны</p></div>
+                                </div>
+                                <div class="row">
+                                    <div class="recommendation__block" style="background-image: url('images/recommendation/mlekara.jpg')"></div>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="recommendation__block" style="background-image: url('images/recommendation/mlekara.jpg')"></div>
-                            </div>
-                        </div>
-                        <div class="col-4 col-xl-8 col-lg-8 col-md-12 col-sm-24">
-                            <div class="row">
-                                <div class="recommendation__block recommendation__block_col-2" style="background-image: url('images/recommendation/cheese-par.jpg')">
-                                    <div class="like">
-                                        <a href=""></a>
+                            <div class="col-8 col-xl-8 col-lg-8 col-md-12 col-sm-24">
+                                <div class="row">
+                                    <div class="recommendation__block recommendation__block_col-2" style="background-image: url('images/recommendation/cheese-par.jpg')">
+                                        <div class="like">
+                                            <a href=""></a>
+                                        </div>
+                                        <div class="recommendation__block__title-mini recommendation__block__line recommendation__block__line_bottom">
+                                            <p>
+                                                Сыры «Гойя»
+                                                Аргентина
+                                                очень длинный заголовок
+                                                текст поднимается выше
+                                            </p>
+                                        </div>
                                     </div>
-                                    <div class="recommendation__block__title-mini recommendation__block__line recommendation__block__line_bottom">
-                                        <p>
-                                            Сыры «Гойя»
+                                </div>
+                            </div>
+                            <div class="col-8 col-xl-8 col-lg-8 col-md-24 col-sm-24">
+                                <div class="row">
+                                    <div class="recommendation__block" style="background-image: url('images/recommendation/bondesto.jpg')"></div>
+                                </div>
+                                <div class="row">
+                                    <div class="recommendation__block" style="background-image: url('images/recommendation/cheese.jpg')">
+                                        <div class="like">
+                                            <a href=""></a>
+                                        </div>
+                                        <div class="recommendation__block__title-mini recommendation__block__line recommendation__block__line_right-top">
+                                            Сыры «Гауда»
                                             Аргентина
-                                            очень длинный заголовок
-                                            текст поднимается выше
-                                        </p>
+                                            желта
+                                            линейка
+                                            остается на
+                                            месте
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-4 col-xl-8 col-lg-8 col-md-24 col-sm-24">
-                            <div class="row">
-                                <div class="recommendation__block" style="background-image: url('images/recommendation/bondesto.jpg')"></div>
-                            </div>
-                            <div class="row">
-                                <div class="recommendation__block" style="background-image: url('images/recommendation/cheese.jpg')">
-                                    <div class="like">
-                                        <a href=""></a>
+                    </div>
+                    <div class="recommendation__carousel__block">
+                        <div class="recommendation__list row">
+                            <div class="col-8 col-xl-8 col-lg-8 col-md-12 col-sm-24">
+                                <div class="row">
+                                    <div class="recommendation__block" style="background-image: url('images/recommendation/ras.jpg')">
+                                        <div class="icon">
+                                            <span class="icon__like"></span>
+                                        </div>
+                                        <div class="recommendation__block__title-mini recommendation__block__line recommendation__block__line_right">
+                                            <p>Рассольные сыры собственного приготовления линейка опускается с нижней стороны</p></div>
                                     </div>
-                                    <div class="recommendation__block__title-mini recommendation__block__line recommendation__block__line_right-top">
-                                        Сыры «Гауда»
-                                        Аргентина
-                                        желта
-                                        линейка
-                                        остается на
-                                        месте
+                                </div>
+                                <div class="row">
+                                    <div class="recommendation__block" style="background-image: url('images/recommendation/mlekara.jpg')"></div>
+                                </div>
+                            </div>
+                            <div class="col-8 col-xl-8 col-lg-8 col-md-12 col-sm-24">
+                                <div class="row">
+                                    <div class="recommendation__block recommendation__block_col-2" style="background-image: url('images/recommendation/cheese-par.jpg')">
+                                        <div class="like">
+                                            <a href=""></a>
+                                        </div>
+                                        <div class="recommendation__block__title-mini recommendation__block__line recommendation__block__line_bottom">
+                                            <p>
+                                                Сыры «Гойя»
+                                                Аргентина
+                                                очень длинный заголовок
+                                                текст поднимается выше
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-8 col-xl-8 col-lg-8 col-md-24 col-sm-24">
+                                <div class="row">
+                                    <div class="recommendation__block" style="background-image: url('images/recommendation/bondesto.jpg')"></div>
+                                </div>
+                                <div class="row">
+                                    <div class="recommendation__block" style="background-image: url('images/recommendation/cheese.jpg')">
+                                        <div class="like">
+                                            <a href=""></a>
+                                        </div>
+                                        <div class="recommendation__block__title-mini recommendation__block__line recommendation__block__line_right-top">
+                                            Сыры «Гауда»
+                                            Аргентина
+                                            желта
+                                            линейка
+                                            остается на
+                                            месте
+                                        </div>
                                     </div>
                                 </div>
                             </div>
