--- a/product-page.html
+++ b/product-page.html
@@ -279,7 +279,82 @@
                                     <p>Республика Беларусь, г. Каменец, ОАО «Савушкин продукт».</p>
                                 </div>
                             </div>
+                            <col-24>
+                                <div class="product-use-carousel">
+                                    <div class="container">
+                                        <div class="row">
+                                            <div class="col-8">
+                                                <div class="product-use-carousel__carousel">
+                                                    <a href="">
+                                                        <div class="product-use-carousel__carousel__item"><img src="images/product/product-page/product-use-1.png" alt="">
+                                                            <div class="product-use-carousel__carousel__item__name">Паста Сицилиана</div>
+                                                            <div class="product-use-carousel__carousel__item__block-link">
+                                                                <a href="">Подробней</a>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                    <a href="">
+                                                        <div class="product-use-carousel__carousel__item"><img src="images/product/product-page/product-use-2.png" alt="">
+                                                            <div class="product-use-carousel__carousel__item__name">Паста Сицилиана</div>
+                                                            <div class="product-use-carousel__carousel__item__block-link">
+                                                                <a href="">Подробней</a>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                    <a href="">
+                                                        <div class="product-use-carousel__carousel__item"><img src="images/product/product-page/product-use-1.png" alt="">
+                                                            <div class="product-use-carousel__carousel__item__name">Паста Сицилиана</div>
+                                                            <div class="product-use-carousel__carousel__item__block-link">
+                                                                <a href="">Подробней</a>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                            <div class="col-8"></div>
+                                            <div class="col-8"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </col-24>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="clients clients-page-product">
+                    <h3 class="clients__title">Этот продукт представлен</h3>
+                    <div class="clients__carousel">
+                        <a href="">
+                            <div class="clients__carousel__item">
+                                <img src="images/clients/azbuka.png" alt="">
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="clients__carousel__item">
+                                <img src="images/clients/azbuka.png" alt="">
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="clients__carousel__item">
+                                <img src="images/clients/azbuka.png" alt="">
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="clients__carousel__item">
+                                <img src="images/clients/azbuka.png" alt="">
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="clients__carousel__item">
+                                <img src="images/clients/azbuka.png" alt="">
+                            </div>
+                        </a>
+                        <a href="">
+                            <div class="clients__carousel__item">
+                                <img src="images/clients/azbuka.png" alt="">
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
